remove unused pictures

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body {
   left:0px;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../work/work-pictures/1_3.png");
+  background-image: url("../work/work-pictures/graph.png");
   background-size: contain;
 }
 
