--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
   left: 0px;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../ronny/ronny-pictures/main.jpg");
+  background-image: url("../rk/rk-pictures/main.jpg");
   background-size: contain;
 }
 
